--- a/js/App.css
+++ b/js/App.css
@@ -25,6 +25,7 @@ body {
 #sound {
 	background-color: white;
 	padding: 20px;
+	position: relative;
 }
 
 #struct-container {
@@ -42,4 +43,8 @@ body {
 	height: 100%;
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: 10px;
+}
+
+.dropZone {
+	background-color: brown;
 }
