--- a/js/components/Source.css
+++ b/js/components/Source.css
@@ -8,4 +8,16 @@
 
 .source {
 	background-color: aquamarine;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+
+#source-list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
 }
