--- a/js/App.css
+++ b/js/App.css
@@ -48,3 +48,15 @@ body {
 .dropZone {
 	background-color: brown;
 }
+
+#create-source {
+	margin: 20px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
